add api integration

--- a/Task/appsettings.json
+++ b/Task/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ApiSettings": {
-    "Url": "https://catfact.ninja/fact"
+    "BaseUrl": "https://catfact.ninja/fact"
   },
   "AppSettings": {
     "FilePath": "test"
