--- a/Task/appsettings.json
+++ b/Task/appsettings.json
@@ -2,7 +2,7 @@
   "ApiSettings": {
     "BaseUrl": "https://catfact.ninja/fact"
   },
-  "AppSettings": {
-    "FilePath": "test"
+  "StorageSettings": {
+    "FilePath": "C:\\Programowanie\\file.txt"
   }
 }
