--- a/Task/Root.csproj
+++ b/Task/Root.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Sinks.Console.LogThemes" Version="0.3.0" />
   </ItemGroup>
 
   <ItemGroup>
