--- a/Root/appsettings.json
+++ b/Root/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ApiSettings": {
-    "BaseUrl": "https://catfact.ninja/fact"
+    "BaseUrl": "https://catfact.ninja/dsadsdad"
   },
   "StorageSettings": {
     "FilePath": "C:\\Programowanie\\file.txt"
