--- a/Root/appsettings.json
+++ b/Root/appsettings.json
@@ -2,7 +2,7 @@
   "ApiSettings": {
     "BaseUrl": "https://catfact.ninja/"
   },
-  "StorageSettings": {
+  "FileSettings": {
     "FilePath": "C:\\Programowanie\\file.txt"
   }
 }
